--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,3 +28,5 @@ jobs:
           pytest --cov --cov-fail-under=50 --cov-report=xml --cov-report=term
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
